--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
 body {
     width: auto;
 }
+h1 {
+    color:red;
+    font-size: 3em;
+}
+
+ul {
+    border: 1px dashed purple;
+}
+figure {
+    text-align: center;
+}
