--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    width: 1200px;
+    width: 100%;
+    height: 100%;
     border:1px solid purple ;
     margin-left: 2%;
     margin-right: 2%;
@@ -17,27 +18,29 @@ header {
 
 .nav-up {
     display: flex;
-    
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
     width: 45%;
     padding: 2px;
     border: 1px solid green;
-    justify-content: flex-end;
+    
 }
-.nav-up ul {
+.nav-up li {
+    display: flex;
     justify-content: space-around;
     color: rgb(77, 148, 255);
     margin-left: 5px;
     margin-right: 5px;
     padding: 2px;
     border-color:red;
-}
-.nav-up ul a {
-    /*  On prepare l'animation des navigations au passage et quand cest cliqué*/
+
 }
 main {
     border: 1px solid orangered;
     margin: 10px;
-    width: 1100px;
+    width: 90%;
 }
 #position {
     width: 33%;
@@ -54,11 +57,11 @@ main {
     display: flex;
     justify-content: flex-start;
 }
-.choixuser {
-
+.form {
+font-family: 'Courier New', Courier, monospace;
 }
 #search {
-    width: 33%;;
+    width: 33%;
     background-color: rgb(77, 148, 255);
     color: white;
 }
@@ -70,15 +73,13 @@ main {
 }
 section {
 padding: 5px;
-display: flex;
-justify-content: space-around;
+
 }
 #grp-pic {
     display: flex;
 }
 .phototel {
-    width: 300px;
-    height: 350px;
+    
     margin: 5px;
     padding: 5px;
     border: 1px solid blue;
@@ -86,31 +87,42 @@ justify-content: space-around;
 }
 
 #gdpic {
-    /* */
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-direction: column;
+    
+    word-wrap: break-word;
 }
 aside {
-    width: 25%;
-
+    width: 45%;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    background-color: rgb(172, 172, 172);
 }
-
+.picaside {
+    display: flex;
+    justify-content: flex-start;
+}
 .star {
     color: rgb(77, 148, 255); ;
 }
 footer {
     display: flex;
     justify-content: space-around;
-    flex-direction: ;
+
 }
 footer div {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
 }
-.minigrp {
-    display: flex;
+
     
-}
-.grppic {
+#grppic {
+    width: 45%;;
     display: flex;
     justify-content: stretch;
+    flex-wrap: wrap;
 }
