--- a/style.css
+++ b/style.css
@@ -77,7 +77,10 @@ padding: 5px;
 }
 #grp-pic {
     display: flex;
+    background-color: grey;
+    border-radius: 20px 0 20px 0;
 }
+
 .phototel {
     
     margin: 5px;
