--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ padding: 5px;
 }
 .phototel {
     width: 600px;
+    background-color: white;
     display: flex;
     justify-content: flex-start;
     margin: 5px;
@@ -106,11 +107,21 @@ padding: 5px;
 
 
 aside {
-    width: 25%;
+    width: 40%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: column;
     background-color: rgb(172, 172, 172);
+}
+#popul {
+    color: pink;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+#courb {
+    margin: 5px;
 }
 .picaside {
     display: flex;
@@ -118,6 +129,8 @@ aside {
 }
 .star {
     color: rgb(77, 148, 255); ;
+    display: flex;
+    flex-direction: row;
 }
 footer {
     display: flex;
