--- a/style.css
+++ b/style.css
@@ -69,17 +69,19 @@ font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
 #vilnatur {
-    color: rgb(119, 115, 115);
+    color: rgb(235, 235, 235);
 }
 section {
 padding: 5px;
-
+}
+h2 {
+    font-size: 20px;
 }
 #grp-pic {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    background-color: rgb(187, 187, 187);
+    background-color: rgb(235, 235, 235);
     border-radius: 20px 0 20px 0;
 }
 .pilier {
@@ -98,7 +100,8 @@ padding: 5px;
     width: 600px;
     background-color: white;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    flex-direction: column;
     margin: 5px;
     padding: 5px;
     border: 1px solid blue;
@@ -111,7 +114,7 @@ aside {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-color: rgb(172, 172, 172);
+    background-color: rgb(235, 235, 235);
 }
 #popul {
     color: pink;
