--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
 }
 #marque {
     color: rgb(77, 148, 255);
+    font-size: 40px;
     width: 45%;
     border: 1px solid black;
 }    
@@ -21,7 +22,7 @@ header {
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     width: 45%;
     padding: 2px;
     border: 1px solid green;
@@ -67,9 +68,10 @@ font-family: 'Courier New', Courier, monospace;
 }
 #titre {
     font-weight: bold;
+    font-size: 40px;
 }
 #vilnatur {
-    color: rgb(235, 235, 235);
+    color: rgb(243, 243, 243);
 }
 section {
 padding: 5px;
@@ -81,7 +83,7 @@ h2 {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(243, 243, 243);
     border-radius: 20px 0 20px 0;
 }
 .pilier {
@@ -90,14 +92,14 @@ h2 {
 }
 #gdpic {
     display: flex;
-    justify-content: space-around;
+    
     align-items: stretch;
     flex-direction: column;
     
     word-wrap: break-word;
 }
 .phototel {
-    width: 600px;
+    width: auto;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -114,21 +116,31 @@ aside {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(243, 243, 243);
 }
 #popul {
-    color: pink;
-    font-size: 20px;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: baseline;
 }
+
 #courb {
     margin: 5px;
 }
 .picaside {
+    
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-start; 
+}
+#haside {  
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 20px;
+    margin: 5px;
+    font-size: 20px;
+    border: 1px solid black;
 }
 .star {
     color: rgb(77, 148, 255); ;
@@ -148,8 +160,18 @@ footer div {
 
     
 #grppic {
-    width: 45%;;
+    width: auto;
     display: flex;
-    justify-content: stretch;
+    justify-content: space-around;
+    flex-direction: row;
     flex-wrap: wrap;
+}
+
+
+
+div h3 {
+    font-size: 30px;
+}
+div h4 {
+    font-size: 20px;
 }
