--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 
 .nav-up {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
     font-size: 30px;
@@ -34,7 +34,7 @@ header {
     color: rgb(77, 148, 255);
     margin-left: 5px;
     margin-right: 5px;
-    padding: 2px;
+    padding: 20px;
 
 }
 main {
@@ -69,7 +69,7 @@ font-family: 'Courier New', Courier, monospace;
 }
 #titre {
     font-weight: bold;
-    font-size: 40px;
+    
 }
 #vilnatur {
     color: black;
@@ -78,8 +78,8 @@ font-family: 'Courier New', Courier, monospace;
 }
 button {
     
-    font-size: 30px;
     border-radius: 0px 20px 20px 0px;
+    
 }
 section {
 padding: 5px;
@@ -92,7 +92,7 @@ h2 {
     justify-content: space-around;
     flex-wrap: wrap;
     background-color: rgb(243, 243, 243);
-    border-radius: 20px 0 20px 0;
+    border-radius: 20px;
 }
 
 .pilier {
@@ -117,13 +117,13 @@ h2 {
     margin: 5px;
     padding: 5px;
     border-radius: 5%;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
 aside {
     border-radius: 20px;
-  width: 35%;
+  width: 25%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -181,6 +181,9 @@ aside {
 footer {
     display: flex;
     justify-content: space-around;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color:#f2f2f2;
 
 }
 footer div {
@@ -201,8 +204,10 @@ footer div {
     font-size: 30px;
 }
 
-#grppic {
-    width: 90%;
+.grppic {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
 }
     
 #activ1 {
@@ -210,12 +215,17 @@ footer div {
     
     margin: 2px;
     background-image: none;
-    background-size: 300px 220px;
+    background-size: cover;
     background-repeat: no-repeat;   
 }
 #activ2 {
     
     margin: 2px;
+    display: flex;
+    flex-direction: column;
+
+
+
 }
 #activ3 {
     
@@ -224,6 +234,8 @@ footer div {
 #activ4 {
     
     margin: 2px;
+    display: flex;
+    flex-direction: column;
 }
 
 div h3 {
@@ -231,8 +243,37 @@ div h3 {
 }
 div h4 {
     font-size: 20px;
+    
 }
 
 #1 h4 {
     font-family: "raleway";
 }   
+#li-heb:active {
+    color: #0065FC;
+}
+#li-heb:hover {
+
+border-top: 5px solid  #0065FC;
+
+opacity: 0.5;
+
+}
+#li-heb:visited {
+    background-color: red;
+    opacity: 0.5;
+    border-bottom: #DEEBFF;
+}
+
+#li-activ:active {
+
+    border-top: 5px solid  #0065FC;
+}
+#li-activ:hover {
+
+    border-top: 5px solid  #0065FC;
+}
+#li-activ:visited {
+
+    border-top: 5px solid  #0065FC;
+}
