bonne petite evolution

--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body {
     margin-left: 2%;
     margin-right: 2%;
 }
+h3{
+    font-weight: bold;
+}
+h1 {
+    font-weight: bold;
+}
 header {
     display: flex;
     flex-direction: row;
@@ -26,11 +32,15 @@ header {
     
 }
 #hebrgmars {
-    font-size: 30px;
+    flex: 100%;
+    font-size: 20px;
+    padding: 25px 25px 1px;;
 }
 .nav-up li {
     display: flex;
     justify-content: space-around;
+    /* text-decoration-line:  ; 
+    on dirait que le <li/> n'a pas de underline eraser  ces nav-up li sont chzanés donc en "nav up p" */
     color: rgb(77, 148, 255);
     margin-left: 5px;
     margin-right: 5px;
@@ -110,8 +120,10 @@ h2 {
     
 }
 #gdpic {
+    background-color: #F2F2F2;
+    border-radius: 20px;
     display: flex;
-    
+    flex: 60%;
     flex-direction: column;
     
     word-wrap: break-word;
@@ -126,24 +138,22 @@ h2 {
     flex-direction: column;
     margin: 5px;
     padding: 5px;
-    border-radius: 5%;
+    border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
 }
-.impic {
-    border-radius: 5%;          /* la suite de la mission là sera de créer toute les config pour cette impic mais aussi créer les autres classs imaside et immars*/
-}
+
 
 aside {
     border-radius: 20px;
-  width: 25%;
+    flex: 20%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     background-color: rgb(243, 243, 243);
     border: 1px solid #F2F2F2;
     margin: 5px;
-    padding: 2px;
+    padding: 20px;
 
     /* 
           width: 40%;
@@ -158,7 +168,7 @@ aside {
 #popul {
     font-weight: bold;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: baseline;
 }
 
@@ -170,9 +180,12 @@ aside {
 }
 .picaside {
     display: flex;
-    justify-content:center;
+    justify-content:flex-start;
+    align-items: flex-end;
     flex-wrap: wrap;
     padding: 10px;
+    background-color: white;
+    border-radius: 10px;
     /* rechercher */
 }
 #haside {  
@@ -224,8 +237,8 @@ footer div {
 }
     
 #activ1 {
-    width: 20%;
-    
+    flex: 25%;
+    height: 370px;
     margin: 2px;
     background-image: none;
     background-size: cover;
@@ -235,6 +248,7 @@ footer div {
     
     margin: 2px;
     display: flex;
+    flex: 25%;
     flex-direction: column;
 
 
@@ -243,17 +257,20 @@ footer div {
 #activ3 {
     
     margin: 2px;
+    flex: 25%;
+    height: 370px;
 }
 #activ4 {
     
     margin: 2px;
     display: flex;
+    flex: 25%;
     flex-direction: column;
 }
-
+  /*
 div h3 {
-    font-size: 30px;
-}
+     font-size: 30px; on garde cette ensemble de balisage jusqu'à etre sûr de n'en avoir pas besoin
+} */
 div h4 {
     font-size: 20px;
     
@@ -262,14 +279,39 @@ div h4 {
 #1 h4 {
     font-family: "raleway";
 }   
-
+/*
+.impic {
+              /* la suite de la mission là sera de créer toute les config pour cette impic mais aussi créer les autres classs imaside et immars
+}  */
 
 .phototel img {
     height: 100px;
     object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+#activ1 img {
+    object-fit: cover;
+    height: 540px;
+    border-radius: 10px;
+}
+#activ2 .divon img {
+    object-fit: cover;
+    border-radius: 10px;
+}
+#activ3 img {
+    object-fit: cover;
+    border-radius: 10px;
+    height: 540px;
+}
+#activ4 .divon img {
+    object-fit: cover;
+
+    border-radius: 10px;
 }
 
 .picaside img {
+    border-radius: 10px 0 0 10px;
     height: 100px;
     object-fit: cover;
 }
