--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Raleway', Courier, monospace;
     margin-left: 2%;
     margin-right: 2%;
 }
@@ -25,7 +26,7 @@ header {
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    font-size: 30px;
+    
     width: 45%;
     padding: 2px;
     
@@ -49,6 +50,9 @@ header {
 }
 form {
     display: flex;
+}
+input {
+    border: 2px solid #F2F2F2;
 }
 main {
     
