--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-body {
+
+* {
+    margin: 0;
+    padding: 0;
+}
+    body {
     font-family: 'Raleway', Courier, monospace;
     margin-left: 2%;
     margin-right: 2%;
@@ -161,7 +166,6 @@ h2 {
     flex: 60%;
     flex-direction: column;
     
-    word-wrap: break-word;
 }
 .phototel {
     flex: 25%;
@@ -215,18 +219,21 @@ aside {
 }
 .picaside {
     display: flex;
-    justify-content:flex-start;
+    /* justify-content:flex-start;
     align-items: flex-end;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
     margin: 20px;
     background-color: white;
     border-radius: 10px;
     /* rechercher */
 }
+.populaireaside {
+    flex: 40%;
+}
 .haside {  
-    display: flex;
-    flex: 55%;
-    justify-content: space-around;
+    /* display: flex; */
+    flex: 60%;
+    /* justify-content: space-around; */
     flex-direction: column;
     
     margin: 5px;
@@ -333,6 +340,9 @@ div h4 {
     height: 540px;
     border-radius: 10px;
 }
+activite-image { 
+  /*  il y a une tâche à remplir ici */
+}
 #activ2 .divon img {
     object-fit: cover;
     border-radius: 10px;
@@ -350,7 +360,8 @@ div h4 {
 
 .picaside img {
     border-radius: 10px 0 0 10px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 #li-heb:active {
