on doit remplir les pfgc- pour donner les tailles de blocs

--- a/style.css
+++ b/style.css
@@ -471,20 +471,43 @@ h*, p*, div {
 height: 370px;
 
 }
+#pfgcs1 {
+
+}
 #fgcs1 {
     height: 370px;
+}
+
+#pfgcd1 {
+
 }
 #fgcd1 {
     height: 175px;
 }
+
+#pfgcd2 {
+
+}
 #fgcd2 {
     height: 175px;
+}
+
+#pfgcs2 {
+
 }
 #fgcs2 {
     height: 370px;
 }
+
+#pfgcd3 {
+
+}
 #fgcd3 {
     height: 134px;
+}
+
+#pfgcd4 {
+    
 }
 #fgcd4 {
     height: 145px;
