--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ form {
 input {
     /* border: 2px solid #F2F2F2;   c est temporaire le temps d un test */
     font-family:'Raleway', Courier, monospace;
+    padding: 10px;
 }
 main {
     
@@ -82,6 +83,11 @@ main {
 .flitr {
     display: flex;
 }
+
+.filtr input {
+    border: 2px solid #F2F2F2;
+    border-radius: 20px;
+}
 label {
     display: flex;
     justify-content: center;
@@ -89,22 +95,21 @@ label {
     font-weight: bold;
 }
 #eco {
-    display: flex;
-    border-radius: 10%;  
+    display: flex;  
     margin: 20px;
     border-radius: 20px;
-    border: 2px solid #DEEBFF;
+    border: 2px solid #F2F2F2;
 }
 
 .icon {
     color: #0065FC;
-    background-color: #DEEBFF;
+    background-color: #F2F2F2;
     border-radius: 20px;
 }
 
 #incot {
     border-radius: 20px;
-    border: 2px solid #DEEBFF;
+    border: 2px solid #F2F2F2;
 }
 
 #famil {
@@ -112,7 +117,7 @@ label {
     border-radius: 10%;  
     margin: 20px;
     border-radius: 20px;  
-    border: 2px solid #DEEBFF;                           
+    border: 2px solid #F2F2F2;                           
 }
 #romant {
     display: flex;
@@ -174,9 +179,7 @@ button {
 section {
 padding: 5px;
 }
-h2 {
-    font-size: 20px;
-}
+
 #grp-pic {
     display: flex;
     justify-content: space-around;
@@ -239,6 +242,7 @@ aside {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    margin: 20px;
 }
 
 #courb {
@@ -254,7 +258,7 @@ aside {
     flex-wrap: wrap; */
     margin: 20px;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 20px;
     /* rechercher */
 }
 .populaireaside {
@@ -365,7 +369,7 @@ div h4 {
 .phototel img {
     display: flex;
     height: 110px;
-    width: 33%;
+    width: 35%;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
@@ -459,9 +463,21 @@ h*, p*, div {
     border: 1px solid red;
 }
 
+.hbm {
+
+}
 .actMars {
     display: flex;
     justify-content: space-around;
+    margin: 20px;
+}
+
+.patrouille {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    border: 1px solid white;
+    border-radius: 20px;
 }
 
 /* .emplwoan img {
@@ -476,13 +492,16 @@ height: 370px;
 }
 #fgcs1 {
     height: 370px;
+    border-radius: 20px 20px 0 0;
 }
 
 #pfgcd1 {
 
 }
 #fgcd1 {
+    /* width: 21%; */
     height: 175px;
+    border-radius: 20px 20px 0 0;
 }
 
 #pfgcd2 {
@@ -490,6 +509,7 @@ height: 370px;
 }
 #fgcd2 {
     height: 175px;
+    border-radius: 20px 20px 0 0;
 }
 
 #pfgcs2 {
@@ -497,6 +517,7 @@ height: 370px;
 }
 #fgcs2 {
     height: 370px;
+    border-radius: 20px 20px 0 0;
 }
 
 #pfgcd3 {
@@ -504,13 +525,15 @@ height: 370px;
 }
 #fgcd3 {
     height: 134px;
+    border-radius: 20px 20px 0 0;
 }
 
 #pfgcd4 {
-    
+
 }
 #fgcd4 {
     height: 145px;
+    border-radius: 20px 20px 0 0;
 }
 
 
