--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
     margin-left: 2%;
     margin-right: 2%;
 }
-h3{
-    font-weight: bold;
-}
+
+/*   h3{
+    
+}  */
+
 h1 {
     font-weight: bold;
 }
@@ -163,9 +165,9 @@ border-left: none;
     
 }
 
-#romcon {
+/* #romcon {
 
-}
+} */
 
 #autoriz {
     display: flex;
@@ -174,9 +176,11 @@ border-left: none;
     border: 2px solid #F2F2F2;
     
 }
-#autocon {
+
+/* #autocon {
     
-}
+} */
+
 /*
 .form {
     display: flex;
@@ -230,6 +234,9 @@ padding: 5px;
     flex-wrap: wrap;
     background-color: rgb(243, 243, 243);
     border-radius: 20px;
+}
+#afich {
+    margin-left: 20px;
 }
 
 .pilier {
@@ -297,12 +304,11 @@ aside {
 }
 .picaside {
     display: flex;
-    /* justify-content:flex-start;
-    align-items: flex-end;
-    flex-wrap: wrap; */
-    margin: 20px;
+    margin: 30px;
     background-color: white;
     border-radius: 20px;
+    border: 1px solid;
+    box-shadow: 0px 0px 5px 1px grey;  /* A revoir cote box-shadow grey, black et taille */
     /* rechercher */
 }
 .populaireaside {
@@ -322,9 +328,15 @@ aside {
     color: rgb(77, 148, 255); ;
     display: flex;
     flex-direction: row;
+    margin: 10px;
 }
-#grey-star1-1 {
+##greystar101 {
+    border: 2px solid black;
     color:#F2F2F2;
+}
+
+.star #greystar * {
+    color: #f2f2f2;
 }
 footer {
     display: flex;
@@ -421,10 +433,13 @@ div h4 {
     object-fit: cover;
     height: 540px;
     border-radius: 10px;
-}
+ }
+
+ /*
 activite-image { 
-  /*  il y a une tâche à remplir ici */
-}
+    il y a une tâche à remplir ici 
+} */
+
 #activ2 .divon img {
     object-fit: cover;
     border-radius: 10px;
@@ -503,17 +518,17 @@ h*, p*, div {
 .boss {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
+   
 }
 
-.hbm {
-
-}
+#hbm {
+    margin-left: 50px;
+ }
 .actMars {
     display: flex;
     justify-content: space-around;
     margin: 20px;
-}
+    }
 
 .patrouille {
     display: flex;
@@ -522,18 +537,31 @@ h*, p*, div {
     flex-direction: column;
     border: 1px solid white;
     border-radius: 20px;
-}
+ }
+ .emplwoan {
+     
+ }
 
 /* .emplwoan img {
     height: 370px;
-}                                surement une maguouille bizarre*/
+}
+                                surement une maguouille bizarre*/
+
+.emplduo {
+    border-radius: 20px;
+    box-shadow: 2px 2px 13px 0px grey;
+    border-bottom-color: #F2F2F2;
+}
+
 .emplduo img{
 height: 370px;
 
 }
-#pfgcs1 {
 
-}
+/* #pfgcs1 {
+
+} */
+
 #fgcs1 {
     width: 100%;
     height: 370px;
@@ -541,9 +569,10 @@ height: 370px;
     object-fit: cover;
 }
 
-#pfgcd1 {
+/* #pfgcd1 {
 
-}
+} */
+
 #fgcd1 {
     width: 100%;
     height: 225px;
@@ -551,9 +580,10 @@ height: 370px;
     object-fit: cover;
 }
 
-#pfgcd2 {
+/* #pfgcd2 {
 
-}
+} */
+
 #fgcd2 {
     width: 100%;
     height: 175px;
@@ -561,9 +591,10 @@ height: 370px;
     object-fit: cover;
 }
 
-#pfgcs2 {
+/* #pfgcs2 {
 
-}
+} */
+
 #fgcs2 {
     width: 100%;
     height: 370px;
@@ -571,19 +602,21 @@ height: 370px;
     object-fit: cover;
 }
 
-#pfgcd3 {
+/* #pfgcd3 {
 
-}
+} */
+
 #fgcd3 {
     width: 100%;
     height: 134px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
-
+/* 
 #pfgcd4 {
 
-}
+} */
+
 #fgcd4 {
     width: 100%;
     height: 145px;
