--- a/style.css
+++ b/style.css
@@ -123,8 +123,9 @@ input {
 #eco {
     display: flex;  
     margin: 20px;
-    border-radius: 20px;
+    border-radius: 30px;
     border: 2px solid #F2F2F2;
+    
     
 }
 
@@ -145,7 +146,7 @@ border-left: none;
     display: flex;
     border-radius: 10%;  
     margin: 20px;
-    border-radius: 20px;  
+    border-radius: 30px;  
     border: 2px solid #F2F2F2; 
                              
 }
@@ -159,7 +160,7 @@ border-left: none;
 #romant {
     display: flex;
     margin: 20px;
-    border-radius: 20px;
+    border-radius: 30px;
     border: 2px solid #F2F2F2;
        
     
@@ -172,7 +173,7 @@ border-left: none;
 #autoriz {
     display: flex;
     margin: 20px;
-    border-radius: 20px;
+    border-radius: 30px;
     border: 2px solid #F2F2F2;
     
 }
@@ -264,6 +265,7 @@ padding: 5px;
     border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
+    box-shadow: 1px 1px 20px 1px grey;
 }
 
 
@@ -275,7 +277,7 @@ aside {
     flex-direction: column;
     background-color: rgb(243, 243, 243);
     border: 1px solid #F2F2F2;
-    margin: 15px;
+    margin-left: 15px;
     padding: 40px;
 
     /* 
@@ -308,7 +310,7 @@ aside {
     background-color: white;
     border-radius: 20px;
     border: 1px solid;
-    box-shadow: 0px 0px 5px 1px grey;  /* A revoir cote box-shadow grey, black et taille */
+    box-shadow: 1px 1px 20px 1px grey;  
     /* rechercher */
 }
 .populaireaside {
@@ -330,7 +332,7 @@ aside {
     flex-direction: row;
     margin: 10px;
 }
-##greystar101 {
+#greystar101 {
     border: 2px solid black;
     color:#F2F2F2;
 }
@@ -427,6 +429,7 @@ div h4 {
     width: 100%;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
+    
 }
 
 #activ1 img {
@@ -537,6 +540,8 @@ h*, p*, div {
     flex-direction: column;
     border: 1px solid white;
     border-radius: 20px;
+    height: 422px;
+    margin: 30px;
  }
  .emplwoan {
      
@@ -548,6 +553,7 @@ h*, p*, div {
                                 surement une maguouille bizarre*/
 
 .emplduo {
+    height: 200px;
     border-radius: 20px;
     box-shadow: 2px 2px 13px 0px grey;
     border-bottom-color: #F2F2F2;
@@ -568,6 +574,10 @@ height: 370px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
+figcaption {
+    margin-left: 15px;
+    margin-top: 5px;
+}
 
 /* #pfgcd1 {
 
@@ -575,7 +585,7 @@ height: 370px;
 
 #fgcd1 {
     width: 100%;
-    height: 225px;
+    height: 175px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
