--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
 #hebrgmars {
     flex: 100%;
     font-size: 20px;
-    padding: 25px 25px 1px;;
+    padding: 25px 25px 1px;
 }
 .nav-up li {
     display: flex;
@@ -276,6 +276,15 @@ padding: 5px;
     box-shadow: 1px 1px 20px 1px grey;
 }
 
+h3 {
+    margin: 5px;
+}
+h4 {
+    margin: 5px;
+}
+.soustitre {
+    font-weight: bolder;
+}
 
 aside {
     border-radius: 20px;
