--- a/style.css
+++ b/style.css
@@ -368,13 +368,16 @@ footer {
     justify-content: space-around;
     margin-top: 5px;
     margin-bottom: 5px;
+    padding-right: 300px;
+    padding-bottom: 45px;
     background-color:#f2f2f2;
 
 }
-footer div {
+.footcat {
     display: flex;
-    justify-content: space-around;
+    
     flex-direction: column;
+    margin-top: 45px;
 }
 
 .contactiv {
