--- a/test.css
+++ b/test.css
@@ -14,3 +14,122 @@ header {
     flex-direction: row;
     justify-content: space-around;
 }
+#marque {
+    flex: 60%;
+}
+
+.nav-up {
+    display: flex;
+    flex: 25%;
+    justify-content: space-around;
+}
+
+.nav-up li {
+
+}
+
+
+main {
+
+}
+.section {
+
+}
+
+#titre {
+
+}
+#vilnatur {
+
+}
+.form {
+
+}
+#choix {
+
+}
+
+#position {
+
+}
+#insearch {
+
+}
+#search {
+
+}
+#filtre {
+    /* display: flex; */    
+    /* On dirait que a cause du id filtre plus bas ceci ne marche pas */
+}
+.filtr {
+
+}
+.filtr input {
+
+}
+
+label{
+
+}
+
+#eco {
+
+}
+.icon
+ {
+
+ }
+ #autocon {
+
+ }
+ #famil {
+
+ }
+ #famcon {
+
+ }
+ #romant {
+
+ }
+ #romcon {
+
+ }
+ #autoriz {
+
+ }
+ #autocon {
+
+ }
+ .info {
+
+ }
+
+ .pilier {
+
+ }
+ #gdpic {
+
+ }
+ #hebrgmars {
+
+ }
+ #grp-pic {
+
+ }
+ .phototel {
+
+ }
+
+ .impic {
+
+ }
+ .soustitre {
+
+ }
+ .star {
+
+ }
+ .inactive {
+     
+ }
